--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,15 @@
 <resources>
 
+
+    <!-- Base application theme. -->
+    <style name="MainActivityTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="colorPrimary">@color/navy_primary</item>
+        <item name="colorPrimaryDark">@color/navy_primary_dark</item>
+        <item name="colorAccent">@color/navy_accent</item>
+
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
 
@@ -72,10 +82,10 @@
     </style>
 
 
-
     <style name="EqualibraTheme" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/CustomActionBar</item>
     </style>
+
     <style name="CustomActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <!--  <item name="android:background">@drawable/action_bar_style</item> -->
         <item name="android:height">56dp</item>
@@ -83,6 +93,7 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen2" parent="@style/Theme.AppCompat.Light">
@@ -91,8 +102,8 @@
         <item name="windowActionBarOverlay">true</item>
         <item name="android:windowContentOverlay">@null</item>
 
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorPrimary">@color/navy_primary</item>
+        <item name="colorPrimaryDark">@color/navy_primary_dark</item>
 
     </style>
 
