--- a/app/src/main/res/layout/dialog_camera.xml
+++ b/app/src/main/res/layout/dialog_camera.xml
@@ -10,13 +10,23 @@
         android:layout_height="match_parent"
         app:zxing_scanner_layout="@layout/custom_barcode_scanner">
 
-        <ImageButton
-            android:id="@+id/switch_flashlight"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_centerVertical="true"
 
-            android:onClick="switchFlashlight" />
     </com.journeyapps.barcodescanner.DecoratedBarcodeView>
+
+    <ImageView
+        android:id="@+id/closeBt"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_margin="6dp"
+        android:src="@drawable/ic_arrow_back_white_36dp"
+         />
+
+    <ImageView
+        android:id="@+id/switch_flashlight"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="6dp"
+        android:onClick="switchFlashlight" />
 
 </RelativeLayout>
