--- a/app/src/main/res/drawable/bottom_rounded_rectangle.xml
+++ b/app/src/main/res/drawable/bottom_rounded_rectangle.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/navy_primary" />
+    <solid android:color="@color/navy_background" />
+    <stroke android:color="@color/navy_primary" android:width="1px"/>
     <corners
-        android:bottomRightRadius="0dp"
-        android:radius="4dp"
         android:topRightRadius="0dp"
+        android:radius="4dp"
+        android:topLeftRadius="0dp"
         />
 
 </shape>
