--- a/app/src/main/res/layout/row_expandable_item.xml
+++ b/app/src/main/res/layout/row_expandable_item.xml
@@ -1,16 +1,13 @@
-<expandablerecyclerview.sample.SimpleItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.silencedut.expandablelayout.ExpandableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/collapsed_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:expWithParentScroll="true"
+    app:expDuration="300"
+    app:expExpandScrollTogether="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@drawable/background_selector"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:elevation="1dp"
-    card_view:cardUseCompatPadding="false"
-    app:cardCornerRadius="5dp"
-
+    android:padding="6dp"
     >
 
 
@@ -19,33 +16,7 @@
         android:id="@+id/collapsed_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        >
-
-        <TextView
-            android:id="@+id/collapsed_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text=""
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@id/collapsed_name"
-            android:layout_alignTop="@id/collapsed_name"
-            android:background="@drawable/top2_rounded_rectangle"
-            />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/expanded_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@drawable/top2_rounded_rectangle"
         >
 
         <TextView
@@ -60,11 +31,26 @@
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
+
+
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/expanded_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_rounded_rectangle"
+        >
+
+
+
         <TextView
             android:id="@+id/contributions_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/expanded_name"
+
             android:lineSpacingExtra="2dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
@@ -77,7 +63,7 @@
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/expanded_name"
+
             android:orientation="vertical"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
@@ -185,4 +171,4 @@
 
 
 
-</expandablerecyclerview.sample.SimpleItemView>
+</com.silencedut.expandablelayout.ExpandableLayout>
