--- a/app/src/main/res/layout/row_inventory_document.xml
+++ b/app/src/main/res/layout/row_inventory_document.xml
@@ -29,8 +29,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/lock"
-                android:layout_toStartOf="@+id/lock"
+                android:layout_toLeftOf="@+id/view"
+                android:layout_toStartOf="@+id/view"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:padding="10dp">
@@ -81,8 +81,8 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/lock"
+            <LinearLayout
+                android:id="@+id/view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -90,9 +90,32 @@
                 android:layout_centerInParent="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:src="@drawable/ic_lock_grey600_36dp"
+                android:orientation="horizontal">
 
-                />
+                <ImageView
+                    android:id="@+id/lock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:src="@drawable/ic_lock_grey600_36dp"
+
+                    />
+
+                <ImageView
+                    android:id="@+id/delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginRight="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:src="@drawable/ic_delete_black_36dp"
+                    android:tint="@color/ligth_gray"
+
+                    />
+
+
+            </LinearLayout>
+
 
         </RelativeLayout>
 
